<resources>
    <string name="app_name">NotesTrack</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>
    <string name="hey_s">Hey %s ,</string>
    <string name="good_morning">Good Morning</string>
    <string name="search_here">Search here</string>
    <string name="title">Title 👋</string>
    <string name="add_category">Add Category 📍</string>
    <string name="edit_category">Edit Category 📍</string>
    <string name="enter_category_title">Enter category title</string>
    <string name="category_card_view">Category card view 🫡</string>
    <string name="confirm">Confirm</string>
    <string name="choose_your_card_image">Choose your card image 🤝</string>
    <string name="card_background_color">Card background color 🤩</string>
    <string name="add_notes">Add Notes</string>
    <string name="edit_notes">Edit Notes</string>
    <string name="enter_title">Enter title</string>
    <string name="description">Description 📝</string>
    <string name="type_something">Type something…</string>
    <string name="edit">Edit</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="saved_notes">Pinned Notes</string>
    <string name="enter_username">Enter username…</string>
    <string name="_1">1</string>
    <string name="delete">Delete</string>
    <string name="add_link">Add Link</string>
    <string name="text">Link Title</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="pin">Pin</string>
    <string name="pinned_notes">Pinned Notes</string>
    <string name="notes_track">Notes Track</string>
    <string name="v3_desc">Easily filter your notes by date to quickly find past entries. Stay organized and focused on the important moments by accessing your notes based on the time they were written.</string>
    <string name="v2_desc">Quickly capture your thoughts and organize them with ease. Filter your notes by date to keep everything just a tap away. Simple, fast, and ready when you are.</string>
    <string name="v2_title">Welcome to NotesTrack!</string>
    <string name="v3_title">Filter by Date, Stay Focused</string>
    <string name="v1_desc">Capture your thoughts and ideas with ease. Organize your notes and filter them by date to stay on top of everything. Simple, smart, and always ready to help you stay organized.</string>
    <string name="next">Next</string>
    <string name="search_your_background">Search your card image</string>
</resources>