<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnBackground">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorOnBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorOnBackground">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:src="@drawable/baseline_arrow_back_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/text" />

                <TextView
                    android:id="@+id/tv_user_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/add_category"
                    android:textAppearance="@style/TextAppearance.App.TitleMedium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/iv_back"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.MaterialToolbar>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/view_color"
            app:layout_constraintBottom_toBottomOf="parent" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/inset_medium"
        app:layout_constraintBottom_toTopOf="@+id/btn_confirm_outer"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout3">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/inset_medium"
            android:layout_marginTop="@dimen/inset_medium"
            android:nestedScrollingEnabled="true">

            <TextView
                android:id="@+id/tv_title_menu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="1"
                android:text="@string/title"
                android:textAppearance="?attr/textAppearanceTitleSmall"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ev_title_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inset_small"
                android:hint="@string/enter_category_title"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/ev_selector_stroke"
                app:counterEnabled="false"
                app:counterMaxLength="80"
                app:counterTextColor="@color/primary"
                app:helperTextTextColor="@color/primary_dark"
                app:hintTextColor="@color/primary_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_menu"
                app:placeholderTextColor="@color/primary_dark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ev_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textAppearance="@style/TextAppearance.App.BodySmall" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_over_view_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inset_medium"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="1"
                android:text="@string/category_card_view"
                android:textAppearance="?attr/textAppearanceTitleSmall"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ev_title_lay"
                app:layout_constraintVertical_chainStyle="packed" />

            <include
                android:id="@+id/overview_card"
                layout="@layout/home_notes_list_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inset_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_over_view_card" />

            <TextView
                android:id="@+id/tv_choose_ur_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inset_medium"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="1"
                android:text="@string/choose_your_card_image"
                android:textAppearance="?attr/textAppearanceTitleSmall"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/overview_card" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ev_card_back_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inset_small"
                android:hint="@string/search_your_background"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/ev_selector_stroke"
                app:counterEnabled="false"
                app:counterMaxLength="80"
                app:counterTextColor="@color/primary"
                app:helperTextTextColor="@color/primary_dark"
                app:hintTextColor="@color/primary_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_choose_ur_card"
                app:placeholderTextColor="@color/primary_dark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ev_card_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textAppearance="@style/TextAppearance.App.BodySmall" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_image_choosen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inset_small"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ev_card_back_lay"
                tools:listitem="@layout/image_choosen_lay_out" />

            <TextView
                android:id="@+id/tv_card_back_picker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inset_medium"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="1"
                android:text="@string/card_background_color"
                android:textAppearance="?attr/textAppearanceTitleSmall"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_image_choosen"
                app:layout_constraintVertical_chainStyle="packed" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_pick_color"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/inset_medium"
                app:cardBackgroundColor="@color/primary"
                app:cardCornerRadius="@dimen/_50sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_card_back_picker"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintVertical_chainStyle="packed" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_confirm_outer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="@dimen/inset_large_medium"
        android:layout_marginBottom="@dimen/inset_medium"
        android:background="@drawable/ev_search_back_ground"
        android:gravity="center"
        android:text="@string/confirm"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="?attr/colorSurface"
        app:cardBackgroundColor="@color/transparent"
        app:cardCornerRadius="@dimen/inset_large_medium"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_max="@dimen/input_container_max_width" />

</androidx.constraintlayout.widget.ConstraintLayout>