<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorOnBackground">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorOnBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorOnBackground">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:src="@drawable/baseline_arrow_back_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/text" />

                <TextView
                    android:id="@+id/tv_user_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/add_notes"
                    android:textAppearance="@style/TextAppearance.App.TitleMedium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/rv_style_mark"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_chainStyle="packed">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/inset_medium"
            android:layout_marginTop="@dimen/inset_medium"
            android:nestedScrollingEnabled="true">

            <TextView
                android:id="@+id/tv_title_menu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="1"
                android:text="@string/title"
                android:textAppearance="?attr/textAppearanceTitleSmall"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ev_title_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inset_small"
                android:hint="@string/enter_title"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/primary"
                app:counterEnabled="false"
                app:counterMaxLength="80"
                app:counterTextColor="@color/primary"
                app:helperTextTextColor="@color/primary_dark"
                app:hintTextColor="@color/primary_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_menu"
                app:placeholderTextColor="@color/primary_dark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ev_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textAppearance="@style/TextAppearance.App.BodySmall" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inset_medium"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="1"
                android:text="@string/description"
                android:textAppearance="?attr/textAppearanceTitleSmall"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ev_title_lay"
                app:layout_constraintVertical_chainStyle="packed" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ev_desc_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inset_medium"
                android:hint="@string/type_something"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/primary"
                app:counterEnabled="false"
                app:counterMaxLength="80"
                app:counterTextColor="@color/primary"
                app:helperTextTextColor="@color/primary_dark"
                app:hintTextColor="@color/primary_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_description"
                app:placeholderTextColor="@color/primary_dark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ev_desc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:textAppearance="@style/TextAppearance.App.BodySmall" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_style_mark"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_gravity="top"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_marginHorizontal="@dimen/inset_medium"
        android:layout_marginBottom="@dimen/inset_medium"
        app:layout_anchor="@id/btn_confirm_outer"
        app:layout_constraintBottom_toTopOf="@+id/btn_confirm_outer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/rich_style_current_type" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_confirm_outer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="@dimen/inset_large_medium"
        android:layout_marginBottom="@dimen/inset_medium"
        android:background="@drawable/ev_search_back_ground"
        android:gravity="center"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textColor="?attr/colorSurface"
        app:cardBackgroundColor="@color/transparent"
        app:cardCornerRadius="@dimen/inset_large_medium"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_max="@dimen/input_container_max_width" />

</androidx.constraintlayout.widget.ConstraintLayout>