<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_12sdp"
        app:strokeColor="@color/view_color"
        app:strokeWidth="1dp"
        app:cardBackgroundColor="@color/primary_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_5sdp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:gravity="center_horizontal"
                android:text="@string/add_link"
                android:textColor="?attr/colorSurface"
                android:textSize="@dimen/_18sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_22sdp"
                app:cardCornerRadius="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/ev_title"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:background="@color/primary_container"
                        android:cursorVisible="true"
                        android:drawablePadding="@dimen/_9sdp"
                        android:foregroundGravity="center"
                        android:gravity="left|center"
                        android:hint="@string/text"
                        android:paddingHorizontal="@dimen/_8sdp"
                        android:singleLine="true"
                        android:textAppearance="?attr/textAppearanceTitleSmall"
                        android:textColor="@color/text"
                        android:textColorHighlight="#00000000"
                        android:textColorHint="@color/hint_color"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/spacer"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/hint_color"
                        app:layout_constraintVertical_bias="0"
                        app:layout_constraintVertical_chainStyle="packed"
                        app:layout_constraintBottom_toTopOf="@+id/ev_link"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ev_title" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/ev_link"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:background="@color/primary_container"
                        android:cursorVisible="true"
                        android:drawablePadding="@dimen/_9sdp"
                        android:foregroundGravity="center"
                        android:gravity="left|center"
                        android:textColor="@color/text"
                        android:hint="@string/add_link"
                        android:paddingHorizontal="@dimen/_8sdp"
                        android:singleLine="true"
                        android:textAppearance="?attr/textAppearanceTitleSmall"
                        android:textColorHighlight="#00000000"
                        android:textColorHint="@color/hint_color"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/spacer" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/negativeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:lineSpacingExtra="@dimen/_8sdp"
                android:padding="@dimen/_10sdp"
                android:text="@string/cancel"
                android:textColor="?attr/colorSurface"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/view2"
                app:layout_constraintEnd_toStartOf="@+id/view2"
                app:layout_constraintStart_toStartOf="@+id/view"
                app:layout_constraintTop_toTopOf="@+id/view2" />

            <TextView
                android:id="@+id/doneText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:lineSpacingExtra="@dimen/_8sdp"
                android:textColor="?attr/colorSurface"
                android:padding="@dimen/_10sdp"
                android:text="@string/save"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/view2"
                app:layout_constraintEnd_toEndOf="@+id/view"
                app:layout_constraintStart_toEndOf="@+id/view2"
                app:layout_constraintTop_toTopOf="@+id/view2" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@color/hint_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView"
                app:layout_constraintVertical_bias="0" />

            <View
                android:id="@+id/view2"
                android:layout_width="1dp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@color/hint_color"
                app:flow_verticalAlign="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>